--- a/.bluemix/toolchain.yml
+++ b/.bluemix/toolchain.yml
@@ -45,7 +45,7 @@ services:
           test13: "$env.dd foo.test13 throw x"
           test14: $env.test1 || 'clone'
           test15: "$env.app_repo ? ‘link’ || ‘clone’"
-          test16: "$env.app_repo ? ‘link’ : ‘clone’"
+          test16: "$env.app_repo !== undefined ? ‘link’ : ‘clone’"
 
 form:
   pipeline:
