--- a/.bluemix/toolchain.yml
+++ b/.bluemix/toolchain.yml
@@ -30,24 +30,34 @@ services:
       - $default: "hostedgit"
         service_id: hostedgit
         parameters:
+
+          # singular test
           test1: $env.test1
-          test2: $env.test1 || $env.test1 + ' ' + $env.test1
-          test3: $env.x || $env.y || 'grand job'
-          test4: $env.test1 || '{{a}} and {{b}}'
-          test5: $env.test1 || "{{a}} and {{b}}"
-          test6: $env.test1 || "{{f}} can't be {{x}}"
-          test7: $env.test1 || 'http://blah.com/repo'
-          test8: $env.test1 || "fo'rk'eee"
-          test9: $env.test1 || "Can't do this!"
-          test10: "$env.test1 == 'foo' ? 'bar' : 'http://blah.com/repo'"
-          test11: "$env.test1 == 'foo' ? 99.99 : 199.98"
-          test12: "$env.test1 == $env.test1 ? 'yes' : 'no'"
-          test13: "$env.dd foo.test13 throw x"
-          test14: "function f() { var x = 99; return $env.dd; }"
-          test15: $env.test1 || 'clone'
-          test16: "$env.app_repo ? 'link' || 'clone'"
-          test17: "$env.app_repo !== undefined ? 'link' : 'clone'"
-          test18: "$env.app_repo ? 'link' : 'clone'"
+          
+          # binary tests
+          test2: $env.test1 || 'clone'
+          test3: $env.test1 || '{{a}} and {{b}}'
+          test4: $env.test1 || "{{a}} and {{b}}"
+          test5: $env.test1 || "{{a}} can't be {{b}} so what!"
+          test6: $env.test1 || 'http://blah.com/repo'
+          test7: $env.test1 || "fo'rk'eee"
+          test8: $env.test1 || "Can't do this!"
+          
+          # javascript complex & ternary tests...
+          test9: $env.x || $env.y + ' ' + $env.z
+          test10: $env.x || $env.y || $env.z
+          test11: "$env.test1 == 'foo' ? 'bar' : 'http://blah.com/repo'"
+          test12: "$env.test1 == 'foo' ? 99.99 : 199.98"
+          test13: "$env.test1 == $env.test2 ? 'yes' : 'no'" 
+          test14: $env.app_repo === 'link' || 'clone'
+          test15: "$env.app_repo !== undefined ? 'link' : 'clone'"
+          test16: "$env.app_repo ? 'link' : 'clone'"
+          
+          # javascript neutralisation tests...
+          test17: "$env.dd foo.test13 throw x"
+          test18: "function f() { var x = 99; return $env.dd; }"
+          test19: "while(true){ $env.f; }"
+          test20: "for(var x = 0; x < y; x++){ $env.f + x; }"
 
 form:
   pipeline:
