--- a/.bluemix/toolchain.yml
+++ b/.bluemix/toolchain.yml
@@ -25,7 +25,8 @@ services:
 
     $switch:
 
-      - $expr: "$env.case === undefined ? 'gritty' : $env.case"
+      #- $expr: "$env.case === undefined ? 'gritty' : $env.case"
+      - $expr: "$env.case
   
       - $case: "undefined"
         service_id: undefined_service
