--- a/.bluemix/toolchain.yml
+++ b/.bluemix/toolchain.yml
@@ -26,7 +26,7 @@ services:
     $switch:
 
       #- $expr: "$env.case === undefined ? 'gritty' : $env.case"
-      - $expr: "$env.case
+      - $expr: $env.case
   
       - $case: "undefined"
         service_id: undefined_service
