--- a/.bluemix/toolchain.yml
+++ b/.bluemix/toolchain.yml
@@ -40,9 +40,9 @@ services:
         service_id: hostedgit
         parameters: {}
   
-      - $default999: "flubber"
-        service_id: flubber
-        parameters: {}
+      - $defdddault999: "flubber"
+        service_iddd: flubber
+        parametersddd: {}
 
 form:
   pipeline:
