--- a/.bluemix/toolchain.yml
+++ b/.bluemix/toolchain.yml
@@ -25,7 +25,7 @@ services:
 
     $switch:
 
-      - $expr: "$env.source_provider == 'undefined' ? 'gritty' : $env.source_provider"
+      - $expr: "$env.case == undefined ? 'gritty' : $env.case"
   
       - $case: "gritty"
         service_id: gritty
