--- a/.bluemix/toolchain.yml
+++ b/.bluemix/toolchain.yml
@@ -30,9 +30,10 @@ services:
       #- $expr: github
       #- $expr: 'github'
       #- $expr: "github"
-      - $expr: {{case}}
+      
+      #- $expr: {{case}}
       #- $expr: '{{case}}'
-      #- $expr: "{{case}}"
+      - $expr: "{{case}}
   
       - $case: "bitbucket"
         service_id: bitbucket
