--- a/.bluemix/toolchain.yml
+++ b/.bluemix/toolchain.yml
@@ -27,13 +27,13 @@ services:
     $switch:
 
       #- $expr: $env.case
-      - $expr: github
+      #- $expr: github
       #- $expr: 'github'
       #- $expr: "github"
       
       #- $expr: {{case}}
       #- $expr: '{{case}}'
-      #- $expr: "{{case}}"
+      - $expr: "{{case}}"
   
       - $case: "bitbucket"
         service_id: bitbucket
