--- a/.bluemix/toolchain.yml
+++ b/.bluemix/toolchain.yml
@@ -28,7 +28,7 @@ services:
       #- $expr: "$env.case === undefined ? 'gritty' : $env.case"
       - $expr: $env.case
   
-      - $case: "hhundefined"
+      - $case: "undefined"
         service_id: undefined
         parameters: {}
   
