--- a/.bluemix/toolchain.yml
+++ b/.bluemix/toolchain.yml
@@ -40,7 +40,7 @@ services:
         service_id: github
         parameters: {}
   
-      - $jjjdefault: "gitlab"
+      - $default: "gitlab"
         service_id: gitlab
         parameters: {}
 
