--- a/.bluemix/toolchain.yml
+++ b/.bluemix/toolchain.yml
@@ -41,9 +41,7 @@ services:
   
       - $case: "github"
         service_id: github
-        parameters:
-          #test: "$env.foo ? process : global"
-          test: "$env.foo ? Headers : Request"
+        parameters: {}
   
       - $default: "gitlab"
         service_id: gitlab
