--- a/.bluemix/toolchain.yml
+++ b/.bluemix/toolchain.yml
@@ -70,10 +70,10 @@ services:
           test26: "console.log($env.dd);"
           test27: "$env.dd ? this : super"
           test28: "try { $env.dd } catch(e){}"
-          
           test29: "$env.y + (5 + 2)"
           test30: "$env.foo ? document.cookie : document"
           test31: "$env.foo ? process : global"
+          test33: "$env.foo ? Headers : Request"
 
 form:
   pipeline:
