--- a/.bluemix/toolchain.yml
+++ b/.bluemix/toolchain.yml
@@ -38,8 +38,8 @@ services:
           repo_name: 'BYOC MyApp'
           repo_url: '{{app_repo}}'
           type: $env.type || "link"
-          has_issues: $env.issues || true
-          enable_traceability: $env.trace || true
+          #has_issues: $env.issues || true
+          #enable_traceability: $env.trace || true
 
       - $case: 'github_integrated'
         service_id: github_integrated
