--- a/.bluemix/toolchain.yml
+++ b/.bluemix/toolchain.yml
@@ -23,7 +23,7 @@ services:
 
       - $expr: $env.case
 
-      - $default: 'hostedgit'
+      - $defaultddd: 'hostedgit'
         service_id: hostedgit
         parameters:
           repo_name: 'BYOC MyApp'
