--- a/.bluemix/toolchain.yml
+++ b/.bluemix/toolchain.yml
@@ -37,7 +37,7 @@ services:
         parameters:
           repo_name: 'BYOC MyApp'
           repo_url: '{{app_repo}}'
-          type: $env.type || "link"
+          type: "$env.type || 'link'"
           #has_issues: $env.issues || true
           #enable_traceability: $env.trace || true
 
