--- a/.bluemix/toolchain.yml
+++ b/.bluemix/toolchain.yml
@@ -21,15 +21,15 @@ services:
 
     $switch:
 
-      - $expr: $env.case
+      - $expr: githubpublic
   
       - $case: 'githubpublic'
         service_id: githubpublic
         parameters:
           repo_name: 'BYOC MyApp'
-          repo_url: '{{app_repo}}'
-          type: "$env.type || 'link'"
-          type2: "$env.type2 || {{app_repo}}"
+          type: $env.type
+          #type: "$env.type || 'link'"
+          #type2: "$env.type2 || {{app_repo}}"
           #has_issues: $env.issues || true
           #enable_traceability: $env.trace || true
 form:
