--- a/.bluemix/toolchain.yml
+++ b/.bluemix/toolchain.yml
@@ -36,23 +36,23 @@ services:
         parameters:
 
           # unary test
-          test1: $env.test1
+          test1: $env.test
           
           # binary tests
-          test2: $env.test1 || 'clone'
-          test3: $env.test1 || '{{a}} and {{b}}'
-          test4: $env.test1 || "{{a}} and {{b}}"
-          test5: $env.test1 || "{{a}} can't be {{b}} so what!"
-          test6: $env.test1 || 'http://blah.com/repo'
-          test7: $env.test1 || "fo'rk'eee"
-          test8: $env.test1 || "Can't do this!"
+          test2: $env.test || 'clone'
+          test3: $env.test || '{{a}} and {{b}}'
+          test4: $env.test || "{{a}} and {{b}}"
+          test5: $env.test || "{{a}} can't be {{b}} so what!"
+          test6: $env.test || 'http://blah.com/repo'
+          test7: $env.test || "fo'rk'eee"
+          test8: $env.test || "Can't do this!"
           
           # javascript complex & ternary tests...
-          test9: $env.x || $env.y + ' ' + $env.z
-          test10: $env.x || $env.y || $env.z
-          test11: "$env.test1 == 'foo' ? 'bar' : 'http://blah.com/repo'"
-          test12: "$env.test1 == 'foo' ? 99.99 : 199.98"
-          test13: "$env.test1 == $env.test2 ? 'yes' : 'no'" 
+          test9: $env.test || $env.y + ' ' + $env.z
+          test10: $env.test || $env.y || $env.z
+          test11: "$env.test === 'foo' ? 'bar' : 'http://blah.com/repo'"
+          test12: "$env.test == 'foo' ? 99.99 : 199.98"
+          test13: "$env.test === $env.test ? 'yes' : 'no'" 
           test14: $env.app_repo === 'link' || 'clone'
           test15: "$env.app_repo !== undefined ? 'link' : 'clone'"
           test16: "$env.app_repo ? 'link' : 'clone'"
@@ -63,7 +63,7 @@ services:
           test19: "$env.dd=y"
           test20: "$env.dd>>>=y"
           test21: "function f() { var x = 99; return $env.dd; }"
-          test22: "while(true){ $env.f; }"
+          test22: "while(true){ $env.f }"
           test23: "for(var x = 0; x < y; x++){ $env.f + x; }"
           test24: "$env.dd; throw new Error('foo');"
           test25: "$env.dd; alert('hello');"
