--- a/.bluemix/toolchain.yml
+++ b/.bluemix/toolchain.yml
@@ -13,7 +13,7 @@ toolchain:
 services:
   sample-repo:
     $switch:
-      - $expr: $env.source_provider
+      - $expr: {{source_provider}}
       - $default: 'hostedgit'
         service_id: hostedgit
         parameters:
