--- a/.bluemix/toolchain.yml
+++ b/.bluemix/toolchain.yml
@@ -7,11 +7,9 @@ template:
 
   info:
     git url: >-
-      $env.repository ? '[' + $env.repository + '](' + $env.repository + ')' : >-
-        "[https://github.com/tonymcguckin/dynamicyml](https://github.com/tonymcguckin/dynamicyml)"
+      $env.repository ? '[' + $env.repository + '](' + $env.repository + ')' : "[https://github.com/tonymcguckin/dynamicyml](https://github.com/tonymcguckin/dynamicyml)"
     git branch: >-
-      $env.repository && $env.branch ? '[' + $env.branch + ']('+ $env.repository + '/tree/' + $env.branch + ')': >-
-        "[flavour9](https://github.com/tonymcguckin/dynamicyml/tree/flavour9)"
+      $env.repository && $env.branch ? '[' + $env.branch + ']('+ $env.repository + '/tree/' + $env.branch + ')': "[flavour9](https://github.com/tonymcguckin/dynamicyml/tree/flavour9)"
 
   info2:
     git url: >-
