--- a/.bluemix/toolchain.yml
+++ b/.bluemix/toolchain.yml
@@ -31,7 +31,7 @@ services:
         service_id: gritty
         parameters: {}
   
-      - $default: "hostedgit"
+      - $case: "hostedgit"
         service_id: hostedgit
         parameters:
 
