--- a/.bluemix/toolchain.yml
+++ b/.bluemix/toolchain.yml
@@ -34,15 +34,18 @@ services:
   
       - $case: "bitbucket"
         service_id: bitbucket
-        parameters: {}
+        parameters:
+          test: $env.branch
   
       - $case: "github"
         service_id: github
-        parameters: {}
+        parameters:
+          test: $env.branch
   
       - $default: "gitlab"
         service_id: gitlab
-        parameters: {}
+        parameters:
+          test: $env.branch
 
 form:
   pipeline:
