--- a/.bluemix/toolchain.yml
+++ b/.bluemix/toolchain.yml
@@ -59,22 +59,25 @@ services:
           test17: $env.app_repo ? 'link' || 'clone'
           
           # javascript neutralisation tests...
-          test18: "$env.dd foo.test13:"
+          test18: "$env.dd( . )foo.test13:"
           test19: "$env.dd=y"
-          test20: "$env.dd>>>=y"
-          test21: "function f() { var x = 99; return $env.dd; }"
-          test22: "while(true){ $env.f }"
+          test20: "$env.dd >>>= 99"
+          test21: "function f() { return $env.dd }"
+          test22: "while(true)($env.f)"
           test23: "for(var x = 0; x < y; x++){ $env.f + x; }"
-          test24: "$env.dd; throw new Error('foo');"
-          test25: "$env.dd; alert('hello');"
-          test26: "console.log($env.dd);"
-          test27: "$env.dd ? this : super"
-          test28: "try { $env.dd } catch(e){}"
-          test29: "$env.y + (5 + 2)"
-          test30: "$env.foo ? document.cookie : document"
-          test31: "$env.foo ? process : global"
-          test32: "$env.foo ? Headers : Request"
-          test33: "if($env.foo !== undefined) return Headers; } else { return this; }"
+          test24: "[].for(var x = 0; x < y; x++){ $env.f + x; }"
+          test25: "throw new Error($env.app_repo)"
+          test26: "alert($env.dd)"
+          test27: "console.log($env.dd)"
+          test28: "$env.dd ? this : super"
+          test29: "try { $env.dd } catch(e){}"
+          test30: "try $env.dd catch(e)"
+          test31: "$env.y + (5 + 2)"
+          test32: "$env.foo ? document.cookie : document"
+          test33: "$env.foo ? process : global"
+          test34: "$env.foo ? Headers : Request"
+          test35: "if($env.foo !== undefined) return Headers else return globalThis"
+          test36: "$env.x($env.y)"
 
 form:
   pipeline:
